<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/light_card"
        style="@style/MonetTG.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_settings_24"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/google_sans_medium"
                    android:text="@string/settings_card_title"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchAmoledPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:fontFamily="@font/google_sans_medium"
                android:text="@string/settings_card_switch_amoled"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchGradient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:fontFamily="@font/google_sans_medium"
                android:text="@string/settings_card_use_gradient"
                android:textSize="16sp" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>